--- a/src/main/resources/assets/technolution/lang/en_us.json
+++ b/src/main/resources/assets/technolution/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "item.technolution.example_item": "EI",
-    "itemGroup.technolution": "Kranke items"
+    "itemGroup.technolution": "Kranke items",
+    "item.technolution.TurquoiseCrystaItem": "turquoise crysta"
 }
