--- a/src/main/resources/assets/technolution/lang/en_us.json
+++ b/src/main/resources/assets/technolution/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "item.technolution.example_item": "EI",
     "itemGroup.technolution": "Kranke items",
-    "item.technolution.turquoise_crystal_item": "Turquoise Crysta",
-    "item.technolution.turquoise_ore": "Turquoise Ore"
+    "item.technolution.theta_crystal_item": "Theta Crysta",
+    "item.technolution.theta_ore_block": "Theta Ore"
 }
