--- a/src/main/resources/assets/technolution/lang/en_us.json
+++ b/src/main/resources/assets/technolution/lang/en_us.json
@@ -1,6 +1,11 @@
 {
     "item.technolution.example_item": "EI",
     "itemGroup.technolution": "Kranke items",
-    "item.technolution.theta_crystal_item": "Theta Crysta",
-    "item.technolution.theta_ore_block": "Theta Ore"
+    "item.technolution.theta_crystal_item": "Theta Crystal",
+    "item.technolution.eta_crystal_item": "Eta Crystal",
+    "item.technolution.zeta_crystal_item": "Zeta Crystal",
+    "item.technolution.theta_ore_block": "Theta Ore",
+    "item.technolution.eta_ore_block": "Eta Ore",
+    "item.technolution.zeta_ore_block": "Zeta Ore",
+    "crystal_item_info": "Burntime: %s"
 }
