--- a/src/main/resources/assets/technolution/lang/en_us.json
+++ b/src/main/resources/assets/technolution/lang/en_us.json
@@ -4,9 +4,9 @@
     "item.technolution.theta_crystal_item": "Theta Crystal",
     "item.technolution.eta_crystal_item": "Eta Crystal",
     "item.technolution.zeta_crystal_item": "Zeta Crystal",
-    "item.technolution.theta_ore_block": "Theta Ore",
-    "item.technolution.eta_ore_block": "Eta Ore",
-    "item.technolution.zeta_ore_block": "Zeta Ore",
+    "block.technolution.theta_ore_block": "Theta Ore",
+    "block.technolution.eta_ore_block": "Eta Ore",
+    "block.technolution.zeta_ore_block": "Zeta Ore",
     "crystal_item_info": "Burntime: %s",
     "block.technolution.energy_absorber_block_basic": "Basic Energy Absorber",
     "block.technolution.energy_absorber_block_theta": "Theta Energy Absorber",
